# rCTRL2

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  docker-compose.yml
.devcontainer/resources/: setup.sh
.devcontainer/resources/apache/: rctrl.conf
influx/: Cargo.toml
influx/derive/: Cargo.toml
influx/derive/src/: attribute.rs  derive_struct.rs  influx_field_value.rs  lib.rs
influx/src/: error.rs  lib.rs
rctrl/: Cargo.toml
rctrl/src/: main.rs  rctrl_async.rs  rctrl_sync.rs
rctrl_api/: Cargo.toml
rctrl_api/src/: lib.rs  remote.rs  telemetry.rs
rctrl_api/src/dataframe/: mod.rs  remote.rs  telemetry.rs
rctrl_gui/: Cargo.toml  _index.html  index.html  web_build.sh
rctrl_gui/assets/: manifest.json
rctrl_gui/src/: connection.rs  gui.rs  lib.rs  logger.rs  remote.rs  telemetry.rs
rctrl_hw/: Cargo.toml
rctrl_hw/src/: lib.rs
rctrl_hw/src/adc/: ads101x.rs  mod.rs
rctrl_hw/src/sensor/: kellerpa7lc.rs  mod.rs
