[package]
name = "rctrl"
version = "0.1.0"
edition = "2021"
authors = ["tnagyzambo"]

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-util", "net", "macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "*"
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
