cargo-features = ["per-package-target"]

[package]
name = "rctrl"
version = "0.1.0"
edition = "2021"
authors = ["tnagyzambo"]
#forced-target =  "aarch64-unknown-linux-gnu"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
ctrlc = "3.2.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rctrl_api = { path = "../rctrl_api" }
rctrl_hw = { path = "../rctrl_hw" }
i2cdev = "0.5.1"
influx = { path = "../influx" }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-util", "net", "macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "*"
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
