[package]
name = "rctrl_gui"
version = "0.1.0"
edition = "2021"
authors = ["tnagyzambo"]

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
console_error_panic_hook = "0.1.7"
eframe = { version = "0.19.0", features = ["persistence"] }
egui = "0.19.0"
ewebsock = { git = "https://github.com/rerun-io/ewebsock" } # Revert to cargo after fix is released
js-sys = { version = "0.3.60" }
rctrl_api = { path = "../rctrl_api" }
serde = { version = "1.0.145", features = ["derive"] }
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.83"